--- a/ExportaDados/ExportaDados.csproj
+++ b/ExportaDados/ExportaDados.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{AAAC6049-E186-4982-AA9C-E8E9CE8A7644}</ProjectGuid>
+    <ProjectGuid>{71E76144-57E9-4018-9096-046029B9F1EA}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>TransporDados</RootNamespace>
-    <AssemblyName>TransporDados</AssemblyName>
+    <RootNamespace>ExportaDados</RootNamespace>
+    <AssemblyName>ExportaDados</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -44,6 +44,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CidadesS.cs" />
+    <Compile Include="CidadesP.cs" />
+    <Compile Include="Conexao.cs" />
+    <Compile Include="Program - Copy %282%29.cs" />
+    <Compile Include="Program - Copy.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -51,11 +56,11 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Dapper">
+      <Version>1.50.5</Version>
+    </PackageReference>
     <PackageReference Include="FirebirdSql.Data.FirebirdClient">
       <Version>6.4.0</Version>
-    </PackageReference>
-    <PackageReference Include="Z.Dapper.Plus">
-      <Version>1.4.4</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
