Busca os dados em duas bases e inclui na base 2 somente os que nao estao inclusos.

--- a/ExportaDados/App.config
+++ b/ExportaDados/App.config
@@ -4,7 +4,9 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
   <connectionStrings>
-    <add name="strFirebirdPrincipal" connectionString="User=SYSDBA;Password=masterkey;Database=D:\Reswincs\SISTEMA TESTE\BANCO\RESULTHGVF.FDB;DataSource=localhost;Port=3050;Dialect=3;Charset=NONE;Role=;Connection lifetime=15;Pooling=false;MinPoolSize=0;MaxPoolSize=50;Packet Size=8192;ServerType=0;" providerName="FirebirdSql.Data.FirebirdClient" />
+    <add name="strFirebirdPrincipal" connectionString="User=SYSDBA;Password=masterkey;Database=D:\SISTEMASANTANA\Banco\RESULTHF.FB;DataSource=localhost;Port=3050;Dialect=3;Charset=NONE;Role=;Connection lifetime=15;Pooling=false;MinPoolSize=0;MaxPoolSize=50;Packet Size=8192;ServerType=0;" providerName="FirebirdSql.Data.FirebirdClient" />
     <add name="strFirebirdSecundaria" connectionString="User=SYSDBA;Password=masterkey;Database=D:\SISTEMASANTANA\Banco\RESULTHG.FB;DataSource=localhost;Port=3050;Dialect=3;Charset=NONE;Role=;Connection lifetime=15;Pooling=false;MinPoolSize=0;MaxPoolSize=50;Packet Size=8192;ServerType=0;" providerName="FirebirdSql.Data.FirebirdClient" />
+    <!--<add name="strFirebirdPrincipal" connectionString="User=SYSDBA;Password=masterkey;Database=D:\Reswincs\SISTEMA TESTE\BANCO\RESULTHGVF.FDB;DataSource=localhost;Port=3050;Dialect=3;Charset=NONE;Role=;Connection lifetime=15;Pooling=false;MinPoolSize=0;MaxPoolSize=50;Packet Size=8192;ServerType=0;" providerName="FirebirdSql.Data.FirebirdClient" />-->
+    <!--<add name="strFirebirdSecundaria" connectionString="User=SYSDBA;Password=masterkey;Database=D:\SISTEMASANTANA\Banco\RESULTHG.FB;DataSource=localhost;Port=3050;Dialect=3;Charset=NONE;Role=;Connection lifetime=15;Pooling=false;MinPoolSize=0;MaxPoolSize=50;Packet Size=8192;ServerType=0;" providerName="FirebirdSql.Data.FirebirdClient" />-->
   </connectionStrings>
 </configuration>
