--- a/ExportaDados/ExportaDados.csproj
+++ b/ExportaDados/ExportaDados.csproj
@@ -44,9 +44,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CidadesS.cs" />
-    <Compile Include="CidadesP.cs" />
+    <Compile Include="CidadeH.cs" />
+    <Compile Include="ClienteH.cs" />
     <Compile Include="Conexao.cs" />
+    <Compile Include="ProdutoH.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -60,6 +61,10 @@
     <PackageReference Include="FirebirdSql.Data.FirebirdClient">
       <Version>6.4.0</Version>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Primario\" />
+    <Folder Include="Secundario\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
