Corrigido alguns problemas com as pesquisas e alguns outros detalhes.

--- a/ExportaDados/App.config
+++ b/ExportaDados/App.config
@@ -1,12 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
   <connectionStrings>
-    <add name="strFirebirdPrincipal" connectionString="User=SYSDBA;Password=masterkey;Database=D:\SISTEMASANTANA\Banco\RESULTHF.FB;DataSource=localhost;Port=3050;Dialect=3;Charset=NONE;Role=;Connection lifetime=15;Pooling=false;MinPoolSize=0;MaxPoolSize=50;Packet Size=8192;ServerType=0;" providerName="FirebirdSql.Data.FirebirdClient" />
-    <add name="strFirebirdSecundaria" connectionString="User=SYSDBA;Password=masterkey;Database=D:\SISTEMASANTANA\Banco\RESULTHG.FB;DataSource=localhost;Port=3050;Dialect=3;Charset=NONE;Role=;Connection lifetime=15;Pooling=false;MinPoolSize=0;MaxPoolSize=50;Packet Size=8192;ServerType=0;" providerName="FirebirdSql.Data.FirebirdClient" />
-    <!--<add name="strFirebirdPrincipal" connectionString="User=SYSDBA;Password=masterkey;Database=D:\Reswincs\SISTEMA TESTE\BANCO\RESULTHGVG.FB;DataSource=localhost;Port=3050;Dialect=3;Charset=NONE;Role=;Connection lifetime=15;Pooling=false;MinPoolSize=0;MaxPoolSize=50;Packet Size=8192;ServerType=0;" providerName="FirebirdSql.Data.FirebirdClient" />-->
-    <!--<add name="strFirebirdSecundaria" connectionString="User=SYSDBA;Password=masterkey;Database=D:\Reswincs\SISTEMA TESTE\BANCO\RESULTHGVF.FDB;DataSource=localhost;Port=3050;Dialect=3;Charset=NONE;Role=;Connection lifetime=15;Pooling=false;MinPoolSize=0;MaxPoolSize=50;Packet Size=8192;ServerType=0;" providerName="FirebirdSql.Data.FirebirdClient" />-->
+    <!--<add name="strFirebirdPrincipal" connectionString="User=SYSDBA;Password=masterkey;Database=D:\SISTEMASANTANA\Banco\RESULTHF.FB;DataSource=localhost;Port=3050;Dialect=3;Charset=NONE;Role=;Connection lifetime=15;Pooling=false;MinPoolSize=0;MaxPoolSize=50;Packet Size=8192;ServerType=0;" providerName="FirebirdSql.Data.FirebirdClient" />-->
+    <!--<add name="strFirebirdSecundaria" connectionString="User=SYSDBA;Password=masterkey;Database=D:\SISTEMASANTANA\Banco\RESULTHG.FB;DataSource=localhost;Port=3050;Dialect=3;Charset=NONE;Role=;Connection lifetime=15;Pooling=false;MinPoolSize=0;MaxPoolSize=50;Packet Size=8192;ServerType=0;" providerName="FirebirdSql.Data.FirebirdClient" />-->
+    <add name="strFirebirdPrincipal" connectionString="User=SYSDBA;Password=masterkey;Database=E:\RESWINCS\BANCO\RESULTH.FB;DataSource=192.168.254.251;Port=3050;Dialect=3;Charset=NONE;Role=;Connection lifetime=15;Pooling=false;MinPoolSize=0;MaxPoolSize=50;Packet Size=8192;ServerType=0;" providerName="FirebirdSql.Data.FirebirdClient" />
+    <add name="strFirebirdSecundaria" connectionString="User=SYSDBA;Password=masterkey;Database=E:\RESWINCS\BANCO\RESULTH.FB;DataSource=192.168.254.250;Port=3050;Dialect=3;Charset=NONE;Role=;Connection lifetime=15;Pooling=false;MinPoolSize=0;MaxPoolSize=50;Packet Size=8192;ServerType=0;" providerName="FirebirdSql.Data.FirebirdClient" />
+    <!--<add name="strFirebirdPrincipal" connectionString="User=SYSDBA;Password=masterkey;Database=D:\Reswincs\SISTEMA TESTE\BANCO\RESULTHGVF.FDB;DataSource=localhost;Port=3050;Dialect=3;Charset=NONE;Role=;Connection lifetime=15;Pooling=false;MinPoolSize=0;MaxPoolSize=50;Packet Size=8192;ServerType=0;" providerName="FirebirdSql.Data.FirebirdClient" />-->
+    <!--<add name="strFirebirdSecundaria" connectionString="User=SYSDBA;Password=masterkey;Database=D:\Reswincs\SISTEMA TESTE\BANCO\RESULTHGVG.FDB;DataSource=localhost;Port=3050;Dialect=3;Charset=NONE;Role=;Connection lifetime=15;Pooling=false;MinPoolSize=0;MaxPoolSize=50;Packet Size=8192;ServerType=0;" providerName="FirebirdSql.Data.FirebirdClient" />-->
   </connectionStrings>
 </configuration>
