--- a/TransporDados/TransporDados.csproj
+++ b/TransporDados/TransporDados.csproj
@@ -44,19 +44,39 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BussinessLogicLayer\ClienteBLL.cs" />
+    <Compile Include="BussinessLogicLayer\ProdutoBLL.cs" />
+    <Compile Include="DataTransferObject\Cidades.cs" />
+    <Compile Include="BussinessLogicLayer\CidadeBLL.cs" />
+    <Compile Include="Conexao.cs" />
+    <Compile Include="DataTransferObject\Cliente.cs" />
+    <Compile Include="DataTransferObject\Produto.cs" />
+    <Compile Include="UserInterface\ICidadeUI.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserInterface\IClienteUI.cs" />
+    <Compile Include="UserInterface\IProdutoUI.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Dapper">
+      <Version>1.50.5</Version>
+    </PackageReference>
+    <PackageReference Include="Dapper.Contrib">
+      <Version>1.50.5</Version>
+    </PackageReference>
+    <PackageReference Include="Dapper.FluentColumnMapping">
+      <Version>1.1.0</Version>
+    </PackageReference>
+    <PackageReference Include="Dapper.FluentMap">
+      <Version>1.7.0</Version>
+    </PackageReference>
     <PackageReference Include="FirebirdSql.Data.FirebirdClient">
       <Version>6.4.0</Version>
     </PackageReference>
-    <PackageReference Include="Z.Dapper.Plus">
-      <Version>1.4.4</Version>
-    </PackageReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
