--- a/TransporDados/TransporDados.csproj
+++ b/TransporDados/TransporDados.csproj
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>database-gear.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
@@ -45,16 +48,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BussinessLogicLayer\ClienteBLL.cs" />
+    <Compile Include="BussinessLogicLayer\CompprodBLL.cs" />
     <Compile Include="BussinessLogicLayer\ProdutoBLL.cs" />
     <Compile Include="DataTransferObject\Cidades.cs" />
     <Compile Include="BussinessLogicLayer\CidadeBLL.cs" />
     <Compile Include="Conexao.cs" />
     <Compile Include="DataTransferObject\Cliente.cs" />
+    <Compile Include="DataTransferObject\CompProd.cs" />
     <Compile Include="DataTransferObject\Produto.cs" />
     <Compile Include="UserInterface\ICidadeUI.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserInterface\IClienteUI.cs" />
+    <Compile Include="UserInterface\ICompprodUI.cs" />
     <Compile Include="UserInterface\IProdutoUI.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -77,6 +83,8 @@
       <Version>6.4.0</Version>
     </PackageReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="database-gear.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
